fixed next and prev buttons alignment

--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -194,7 +194,7 @@
 
 .next-button{
     position: absolute;
-    top: 50%;
+    top: 35%;
     right: 0;
     transform: translateY(-50%);
     border: none;
@@ -210,7 +210,7 @@
   
   .prev-button {
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 0;
     transform: translateY(-50%);
     border: none;
@@ -290,10 +290,10 @@
         border-radius: 10px;
     }
 
-    .no-products{
+    .no-products-filters{
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: #00000000;
         display: grid;
         place-items: center;
     ;
